# Gov_zmuly

./: .gitignore  README.md  pyproject.toml
backend/: .env  main.py
backend/app/: database.py  models.py  parser.py
backend/app/routers/: ai_features.py  item_features.py
frontend/: frontend.py
